# pmunifi

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  justfile  package-lock.json  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
.specify/memory/: constitution.md
dashboards/: README.md  ap-radio-performance.json  client-insights.json  site-overview.json  switch-port-detail.json
docs/: architecture.md  configuration.md  developer.md  getting-started.md  grafana.md  index.md  metrics.md  mkdocs.yml  topology.md  troubleshooting.md
docs/superpowers/plans/: 2026-03-16-hatch-vcs-versioning.md  2026-03-16-install-e2e-lifecycle.md  2026-03-16-pmrep-views.md
docs/superpowers/specs/: 2026-03-16-install-e2e-design.md  2026-03-16-pmrep-views-design.md
man/: pmdaunifi.1.md
packaging/deb/: control  postinst  rules
packaging/rpm/: pcp-pmda-unifi.spec
specs/: original-spec.md
specs/001-unifi-pmda/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-unifi-pmda/checklists/: requirements.md
specs/001-unifi-pmda/contracts/: configuration.md  pcp-metrics.md  unifi-api-client.md
src/pcp_pmda_unifi/: __init__.py  cli.py  collector.py  config.py  formatting.py  install_helper.py  instances.py  pmda.py  poller.py  setup.py  snapshot.py  topology.py
src/pcp_pmda_unifi/deploy/: Install  Remove  pmrep-unifi.conf  unifi.conf.sample
tests/: conftest.py  generate_synthetic_archive.py
tests/e2e/: mock_server.py  test_install_lifecycle.py  test_live_pmda.py  test_quickstart.py  test_unifi2dot.py
tests/fixtures/: stat_device.json  stat_health.json  stat_sitedpi.json  stat_sta.json  stat_sysinfo.json
tests/integration/: mock_controller.py  test_deploy.py  test_pmda_fetch.py
tests/unit/: conftest.py  test_cli.py  test_collector.py  test_config.py  test_first_poll.py  test_formatting.py  test_instances.py  test_pmrep_conf.py  test_poller.py  test_setup.py  test_snapshot.py  test_topology.py
